--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body style='background-color: #282c34;' >
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="http://pastebin.com/raw/NR6ZEmJt"></script>
+    <script src="https://pastebin.com/raw/NR6ZEmJt"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
